# CCometixLine

./: Cargo.toml
src/: main.rs
src/core/: statusline.rs
src/core/segments/: directory.rs
