[package]
name = "ccometixline"
version = "1.1.0"
edition = "2021"
description = "CCometixLine (ccline) - High-performance Claude Code StatusLine tool written in Rust"
authors = ["Haleclipse"]
license = "MIT"
repository = "https://github.com/Haleclipse/CCometixLine"
readme = "README.md"
keywords = ["claude", "statusline", "powerline", "rust", "claude-code"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"

ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

ansi_term = { version = "0.12", optional = true }
ansi-to-tui = { version = "7.0", optional = true }

ureq = { version = "2.10", features = ["json"], optional = true }
semver = { version = "1.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
dirs = { version = "5.0", optional = true }
regex = "1.0"
terminal_size = "0.4"
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"

[features]
default = ["tui", "self-update", "dirs"]
tui = ["ratatui", "crossterm", "ansi_term", "ansi-to-tui", "chrono"]
self-update = ["ureq", "semver", "chrono", "dirs"]
